[package]
name = "rusty_rocket"
version = "0.1.0"
authors = ["Zach Clayburn <zachclayburn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
diesel = { version = "1.4.3", features = ["sqlite"] }
dotenv = "0.15.0"